--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Første eksempel</title>
     <style>
         * {
+            font-family:sans-serif;
             margin: 0;
             padding: 0;
         }
