--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Papa's Pizza</title>
+    <title>Crazy man food</title>
     <link rel="shortcut icon" href="media/chef.ico" />
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -13,7 +13,7 @@
         <div class="header">
             <nav>
                 <ul>
-                    <li style="float: left;"><a href="#">Papa's Pizza <img src="media/chef.ico" alt="Papa's Pizza"></a></li>
+                    <li style="float: left;"><a href="#">Crazy man food <img src="media/chef.ico" alt="Crazy man food"></a></li>
                     <li><a href="#">Menu</a></li>
                     <li><a href="allergens.html">Allergens</a></li>
                     <li><a href="">About and contact</a></li>
@@ -21,16 +21,42 @@
                 </ul>
             </nav>
         </div>
+
+        <div class="splash">
+            <img draggable="false" src="https://www.finedininglovers.com/sites/g/files/xknfdk626/files/2021-07/chef%20%281%29.jpg" alt="Picture of a Chef">
+            <div>
+                <h1>Crazy man food</h1>
+                <table>
+                    <tr>
+                        <th>Day</th>
+                        <th>Time</th>
+                    </tr>
+                    <tr>
+                        <td>Monday to Thursday</td>
+                        <td>16:00 22:00</td>
+                    </tr>
+                    <tr>
+                        <td>Friday to Saturday</td>
+                        <td>1800 00:00</td>
+                    </tr>
+                    <tr>
+                        <td>Sunday</td>
+                        <td>13:00 20:00</td>
+                    </tr>
+
+                </table>
+            </div>
+        </div>
         <div class="main">
             <h1>Good FOOD</h1>
-            <details>
+            <details open>
                 <summary>🥐<strong>Lunch items </strong></summary>
                 <ul>
                     <p>Contains</p>
                     <li>100 % Pizza</li>
                 </ul>
             </details>
-            <details>
+            <details open>
                 <summary>
                     🍲 <strong>Dinner items</strong></summary>
                 <ul>
@@ -38,7 +64,7 @@
                     <li>100 % Pizza</li>
                 </ul>
             </details>
-            <details>
+            <details open>
                 <summary>
                     🧁<strong>Snacks & desserts</strong></summary>
                 <ul>
@@ -57,34 +83,9 @@
                 </dl>
             </details>
         </div>
-        <div class="rightpane">
-            <table>
-                <tr>
-                    <th>Day</th>
-                    <th>Time</th>
-                </tr>
-                <tr>
-                    <td>Monday to Thursday</td>
-                    <td>16:00 22:00</td>
-                </tr>
-                <tr>
-                    <td>Friday</td>
-                    <td>1800 00:00</td>
-                </tr>
-                <tr>
-                    <td>Saturday</td>
-                    <td>1800 00:00</td>
-                </tr>
-                <tr>
-                    <td>Sunday</td>
-                    <td>13:00 20:00</td>
-                </tr>
-
-            </table>
-            <iframe src="allergens.html" frameborder="0"></iframe>
-        </div>
         <div class="footer">
             <footer>
+
                 <p>Made with ❤︎ since 2021 by Group 7</p>
             </footer>
         </div>
