--- a/index.html
+++ b/index.html
@@ -5,22 +5,18 @@
     <title>Crazy man food</title>
     <link rel="shortcut icon" href="media/chef.ico" />
     <link rel="stylesheet" href="styles/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Jost' rel='stylesheet'>
 </head>
 
 <body>
 
     <div class="grid-container">
-        <div class="header">
-            <nav>
-                <ul>
-                    <li style="float: left;"><a href="#">Crazy man food <img src="media/chef.ico" alt="Crazy man food"></a></li>
-                    <li><a href="#">Menu</a></li>
-                    <li><a href="allergens.html">Allergens</a></li>
-                    <li><a href="">About and contact</a></li>
-
-                </ul>
-            </nav>
-        </div>
+        <nav>
+            <ul>
+                <li style="float: left;"><a href="#">Crazy man food</a></li>
+                <li><a href="#menu">Menu</a></li>
+            </ul>
+        </nav>
 
         <div class="splash">
             <img draggable="false" src="https://www.finedininglovers.com/sites/g/files/xknfdk626/files/2021-07/chef%20%281%29.jpg" alt="Picture of a Chef">
@@ -47,48 +43,102 @@
                 </table>
             </div>
         </div>
-        <div class="main">
-            <h1>Good FOOD</h1>
-            <details open>
-                <summary>🥐<strong>Lunch items </strong></summary>
-                <ul>
-                    <p>Contains</p>
-                    <li>100 % Pizza</li>
-                </ul>
-            </details>
-            <details open>
-                <summary>
-                    🍲 <strong>Dinner items</strong></summary>
-                <ul>
-                    <p>Contains</p>
-                    <li>100 % Pizza</li>
-                </ul>
-            </details>
-            <details open>
-                <summary>
-                    🧁<strong>Snacks & desserts</strong></summary>
-                <ul>
-                    <p>Contains</p>
-                    <li>100 % Pizza</li>
-                </ul>
-            </details>
-            <details>
-                <summary>
-                    ☕<strong>Drinks</strong></summary>
-                <dl>
-                    <dt>Coffee</dt>
-                    <dd>Black hot drink</dd>
-                    <dt>Milk</dt>
-                    <dd>White cold drink</dd>
-                </dl>
-            </details>
-        </div>
-        <div class="footer">
-            <footer>
+        <main>
+            <h2>Salads</h2>
+            <div class="item" tabindex="1">
+                <div class="image">
+                    <img src="https://www.peppes.no/produktbilder_pepp2013/600x300/CCP.jpg" alt="Picture of Caesar's Chicken">
+                </div>
+                <div class="text">
+                    <h2><strong>
+                        Caesar's Chicken
+                         </strong></h2>
+                    <p>Marinated chicken, cherry tomato, romaine lettuce, croutons. Turn in caesar dressing and top with parmesan</p>
+                    <strong>158kr</strong>
+                    <em>Allergens: Barley, Eggs, Fish, Gluten, Wheat, Milk, Mustard</em>
+                </div>
+            </div>
 
-                <p>Made with ❤︎ since 2021 by Group 7</p>
-            </footer>
-        </div>
+            <div class="item" tabindex="2">
+                <div class="image">
+                    <img src="https://www.peppes.no/produktbilder_pepp2013/600x300/S2.jpg" alt="Picture of Side Salad with sour cream ">
+                </div>
+                <div class="text">
+                    <h2><strong>
+                        Side Salad with sour cream
+                         </strong></h2>
+                    <p>Perfect for pizza! Crispy green salad with red onion and cherry tomatoes Served with sour cream dressing</p>
+                    <strong>59kr</strong>
+                    <em>Allergens: Milk</em>
+                </div>
+            </div>
+            <div class="item" tabindex="3">
+                <div class="image">
+                    <img src="https://www.peppes.no/produktbilder_pepp2013/600x300/TAS.jpg" alt="Picture of 
+                    Tasty Taco Salad
+                    ">
+                </div>
+                <div class="text">
+                    <h2><strong>
+                        Tasty Taco Salad
+                         </strong></h2>
+                    <p>Two hot tortilla with graded cheese, salsa and taco meat. Comes with lettuce, red onion, corn, cherry tomatoes, nachips, Sour cream dressing, guacamole and lime.</p>
+                    <strong>158kr</strong>
+                    <em>Allergens: Gluten, Wheat, Milk</em>
+                </div>
+                <!--From https://www.peppes.no/desktop/meny/andre-matretter/salater-11?9-->
+            </div>
+            <h2>Burgers</h2>
+            <div class="item" tabindex="4">
+                <div class="image">
+                    <img src="https://assets.biggreenegg.eu/app/uploads/2019/03/28145521/topimage-classic-hamburger-2019m04-800x534.jpg" alt="Picture of Cheeseburger">
+                </div>
+                <div class="text">
+                    <h2><strong>
+                        Classic Cheeseburger
+                         </strong></h2>
+                    <p>Crazy hot hamburger topped with real cheddars chese, bacon and jalapeño</p>
+                    <strong>158kr</strong>
+                    <em>Allergens: Pork, Gluten, Wheat, Milk</em>
+                </div>
+            </div>
+
+            <div class="item" tabindex="4">
+                <div class="image">
+                    <img src="https://labrador-www.kk.no/images/67770163.jpg?imageId=67770163&x=0&y=15.63&cropw=100&croph=84.38&width=980&height=552&compression=80" alt="Picture of Burger">
+                </div>
+                <div class="text">
+                    <h2><strong>
+                        Classic hamburger
+                         </strong></h2>
+                    <p>Crazy hot hamburger juicy beef or plantbased meat</p>
+                    <strong>158kr</strong>
+                    <em>Allergens: Soy, Gluten, Wheat, Milk</em>
+                </div>
+            </div>
+
+
+
+        </main>
+        <footer>
+            <section>
+                <h2>Location:</h2>
+                <address>
+                <p>Rainbow Road 9, 0101 Oslo, Norway</p>
+                <p>(<a href="#">Google Maps</a>)</p>
+                </address>
+                <h2>Opening hours:</h2>
+                <p>Tuesday - Thursday: 16:00 - 22:00</p>
+                <p>Friday - Saturday: 18:00 - 00:00</p>
+                <p>Sunday - 18:00 - 00:00</p>
+                <h2>Contact:</h2>
+                <address>
+                <p>E-mail: <a href="mailto:faa@detpaa.no">faa@detpa.no</a></p>
+                <p>Telephone: <a href="tel:+47012345678">+47 012345678</a></p>
+                </address>
+            </section>
+            <p>Made with ❤︎ since 2021 by Group 7</p>
+        </footer>
     </div>
 </body>
 
@@ -96,7 +146,6 @@
 
 <!--Navbar https://www.w3schools.com/css/css_navbar_horizontal.asp
     Sticky footer https://www.geeksforgeeks.org/how-to-create-footer-to-stay-at-the-bottom-of-a-web-page/
-    Foods https://www.fsai.ie/legislation/food_legislation/food_information/14_allergens.html
 -->
 
 </html>
