--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <nav>
             <ul>
                 <li style="float: left;"><a href="#">Crazy man food</a></li>
+                <li><a href="#contact">Contact</a></li>
                 <li><a href="#menu">Menu</a></li>
             </ul>
         </nav>
@@ -43,7 +44,7 @@
                 </table>
             </div>
         </div>
-        <main>
+        <main id="menu">
             <h2>Salads</h2>
             <div class="item" tabindex="1">
                 <div class="image">
@@ -121,7 +122,7 @@
 
         </main>
         <footer>
-            <section>
+            <section id="contact">
                 <h2>Location:</h2>
                 <address>
                 <p>Rainbow Road 9, 0101 Oslo, Norway</p>
