--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <a href="/Oblig1/index.html">Oblig1</a>
+    <a href="https://rasmusjs.github.io/DATA1200-1-21H-Webutvikling-og-inkluderende-design/Oblig1/index.html">Oblig1</a>
     
 </body>
 
