--- a/index.html
+++ b/index.html
@@ -3,21 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Crazy man food</title>
-    <link rel="shortcut icon" href="media/chef.ico" />
-    <link rel="stylesheet" href="styles/style.css">
-    <link href='https://fonts.googleapis.com/css?family=Jost' rel='stylesheet'>
 </head>
 
 <body>
 
-    <a href="https://rasmusjs.github.io/DATA1200-1-21H-Webutvikling-og-inkluderende-design/Oblig1/index.html">Oblig1</a>
+    <a href="https://rasmusjs.github.io/DATA1200-1-21H-Webutvikling-og-inkluderende-design/oblig 1/index.html">Oblig1</a>
     
 </body>
 
-
-
-<!--Navbar https://www.w3schools.com/css/css_navbar_horizontal.asp
-    Sticky footer https://www.geeksforgeeks.org/how-to-create-footer-to-stay-at-the-bottom-of-a-web-page/
--->
 
 </html>
