--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
 
   body, html {
     padding: 3px 3px 3px 3px;
-
     background-color: #D8DBE2;
-
-    font-family: Verdana, sans-serif;
+    font-family: Ubuntu, sans-serif;
     font-size: 11pt;
     text-align: center;
   }
@@ -23,26 +21,23 @@
   main {
     position: relative;
     display: table;
-
     width: 800px;
-
     margin-bottom: 3px;
     margin-left: auto;
     margin-right: auto;
     padding: 0px 0px 0px 0px;
-
     border-width: 2px;
     border-color: #212738;
     border-style: solid;
-
     background-color: #FFFFFF;
-
     text-align: center;
   }
     </style>
 <body>
 <main>
-    <a href="https://rasmusjs.github.io/DATA1200-1-21H-Webutvikling-og-inkluderende-design/oblig 1/index.html">Oblig1</a>
+    <h1> Obligs </h1>
+    <a href="https://rasmusjs.github.io/DATA1200-1-21H-Webutvikling-og-inkluderende-design/oblig 1/index.html"> <h2> oblig1 </h2></a>
+    <a href="https://rasmusjs.github.io/webOblig2/"><h2>oblig2</h2></a>
     </main>
 </body>
 
