--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
 <body>
 <main>
     <h1> Obligs </h1>
-    <a href="https://rasmusjs.github.io/DATA1200-1-21H-Webutvikling-og-inkluderende-design/oblig 1/index.html"> <h2> oblig1 </h2></a>
-    <a href="https://rasmusjs.github.io/webOblig2/"><h2>oblig2</h2></a>
+    <a href="https://rasmusjs.github.io/DATA1200-1-21H-Webutvikling-og-inkluderende-design/oblig1/index.html"><h2>Mandatory task 1</h2></a>
+    <a href="https://rasmusjs.github.io/DATA1200-1-21H-Webutvikling-og-inkluderende-design/oblig2/index.html"><h2>Mandatory task 2/h2></a>
+    <a href="https://sigurdomnes.github.io/Final-Assignment/"><h2>Final Assignment</h2></a>
     </main>
 </body>
 
