--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     </style>
 <body>
 <main>
-    <h1> Obligs </h1>
-    <a href="https://rasmusjs.github.io/DATA1200-1-21H-Webutvikling-og-inkluderende-design/oblig1/index.html"><h2>Mandatory task 1</h2></a>
-    <a href="https://rasmusjs.github.io/DATA1200-1-21H-Webutvikling-og-inkluderende-design/oblig2/index.html"><h2>Mandatory task 2/h2></a>
+    <h1>Assignments</h1>
+    <a href="https://rasmusjs.github.io/DATA1200-1-21H-Webutvikling-og-inkluderende-design/oblig1/index.html"><h2>Mandatory assignment One</h2></a>
+    <a href="https://rasmusjs.github.io/DATA1200-1-21H-Webutvikling-og-inkluderende-design/oblig2/index.html"><h2>Mandatory assignment Two</h2></a>
     <a href="https://sigurdomnes.github.io/Final-Assignment/"><h2>Final Assignment</h2></a>
     </main>
 </body>
